force-app/main/default/objects/RV_VacSettingLimits__c/RV_VacSettingLimits__c.object-meta.xml
<CustomObject>
    <label>RV VacSettingLimits</label>
    <nameField>
        <label>RV VacSettingLimits</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV VacSettingLimits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>