force-app/main/default/objects/RV_VacSettingLimits__c/fields/BackpressureUL__c.field-meta.xml
<CustomField>
    <fullName>BackpressureUL__c</fullName>
    <label>BackpressureUL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>