force-app/main/default/objects/RV_VacSettingLimits__c/fields/PalletType__c.field-meta.xml
<CustomField>
    <fullName>PalletType__c</fullName>
    <label>PalletType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>