force-app/main/default/objects/RV_VacSettingLimits__c/fields/SettingLL__c.field-meta.xml
<CustomField>
    <fullName>SettingLL__c</fullName>
    <label>SettingLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>