force-app/main/default/objects/RV_VacSettingLimits__c/fields/VacProxSensorAvailable__c.field-meta.xml
<CustomField>
    <fullName>VacProxSensorAvailable__c</fullName>
    <label>VacProxSensorAvailable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>