force-app/main/default/objects/RV_VacSettingLimits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>PalletDesign__c</columns>
    <columns>SpacerYN__c</columns>
    <columns>SettingLL__c</columns>
    <columns>SettingUL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PTC__c</field>
        <operation>contains</operation>
        <value>1360a f</value>
    </filters>
    <filters>
        <field>SZC__c</field>
        <operation>equals</operation>
        <value>08</value>
    </filters>
    <label>All</label>
</ListView>